[package]
name = "good_morning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"
tokio = { version =  "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0.72"
chatgpt_rs = "1.1.13"
chrono = "0.4.26"
cron_tab = {version = "0.2", features = ["async"]}

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
