[package]
name = "good_morning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json","multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"
tokio = { version =  "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0.72"
chatgpt_rs = "1.1.13"
chrono = "0.4.26"
cron_tab = {version = "0.2", features = ["async"]}
image = {version = "0.24.6", features=["webp-encoder"]}
[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
