[package]
name = "good_morning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json","multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
log = "0.4.17"
env_logger = "0.11.3"
dotenv = "0.15.0"
tokio = { version =  "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0.72"
chatgpt_rs = "1.1.13"
chrono = "0.4.26"
cron_tab = {version = "0.2", features = ["async"]}
rand = "*"
[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[dependencies.openssl-sys]
version = "0.9.91"
features = ["vendored"]
